infrastructure/flux-webhook/webhook-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flux-webhook
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
    external-dns.alpha.kubernetes.io/target: traefik.i.recompiled.org
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flux-webhook.i.recompiled.org`)
      kind: Rule
      services:
        - name: notification-controller
          port: 80
  tls:
    secretName: flux-webhook-tls
